# mockito

./: .appveyor.yml  .travis.yml  Cargo.toml  LICENSE  README.md  benchmarks.txt  index.html  sample  test
.cargo/: config.toml
.github/workflows/: linters.yml  tests.yml
benches/: lib.rs
docs/: index.html  search-index.js
docs/implementors/core/cmp/: trait.PartialEq.js
docs/implementors/core/fmt/: trait.Debug.js
docs/mockito/: constant.SERVER_ADDRESS.html  constant.SERVER_URL.html  fn.mock.html  fn.reset.html  index.html  sidebar-items.js  struct.Mock.html
docs/src/mockito/src/: lib.rs.html  server.rs.html
examples/: mockito-server.rs
src/: client.rs  command.rs  diff.rs  error.rs  intercept_hyper.rs  intercept_tcp_stream.rs  intercepted_url.rs  legacy.rs  lib.rs  logger.rs  main.rs  matcher.rs  mock.rs  mock_builder.rs  mock_hyper.rs  mock_tcp_listener.rs  mock_tcp_stream.rs  mockable_hyper.rs  mockable_tcp_stream.rs  request.rs  response.rs  server.rs  server_pool.rs  tcp_listener.rs  url.rs
tests/: legacy.rs  lib.rs
tests/files/: simple.http
