[package]
name = "mockito"
version = "1.0.2"
authors = ["Florin Lipan <florinlipan@gmail.com>"]
license = "MIT"
homepage = "https://github.com/lipanski/mockito"
repository = "https://github.com/lipanski/mockito"
documentation = "https://docs.rs/mockito"
description = "HTTP mocking for Rust."
keywords = ["mock", "mocks", "http", "webmock", "webmocks"]
categories = ["development-tools::testing", "web-programming"]
exclude = ["/.appveyor.yml", "/.travis.yml", "/benchmarks.txt", "/docs/", "/slides.pdf"]
edition = "2021"

[badges]
travis-ci = { repository = "lipanski/mockito", branch = "master" }
appveyor = { repository = "lipanski/mockito", branch = "master", service = "github" }

[dependencies]
assert-json-diff = "2.0"
colored = { version = "2.0", optional = true }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
regex = "1.7"
serde_json = "1.0"
serde_urlencoded = "0.7"
similar = "2.2"
tokio = { version = "1.25", features = ["full"] }

[dev-dependencies]
env_logger = "0.8"
testing_logger = "0.1"
reqwest = "0.11"

[features]
default = ["color"]
color = ["colored"]
